tests/paczka2/big_fuzzy/77939601.err
Error in line 1: lMuNjA S270 58,1
Error in line 2: lMuNjA S698 6,0
Error in line 4: RKBtJ A418 38,5
Error in line 16: 0Bv7m S270 59,1
Error in line 18: lMuNjA S796 4,0
Error in line 10: RKBtJ S698 77,3
Error in line 30: 0Bv7m S698 85,4
Error in line 33: S270 A418 95,0
Error in line 29: RKBtJ S270 27,2
Error in line 53: S270 S698 -3,5
Error in line 31: 0Bv7m S270 87,4
Error in line 48: S270 S698 84,3
Error in line 64: S270 A418 3,9
Error in line 62: pH65XSNzW5 A418 87,0
Error in line 68: pH65XSNzW5 S698 35,0
Error in line 73: 0Bv7m A41  69,2
Error in line 71: aFt S698 98,7
Error in line 78: aFt A\18 92,\
Error in line 79: Tqg9kIBx6sO S698 84,8
Error in line 58: 0Bv7m A418 24,7
Error in line 72: RKBtJ S270 65,2
Error in line 82: pH65XSNzW5 S270 31,1
Error in line 92: pH65XSNzW5 S698 367,5
Error in line 77: aFt A418 66,6
Error in line 105: Tqg9kIBx6sO A418 91,5
Error in line 111: Tqg9kIBx6sO A418 5,7
Error in line 112: Tqg9kIBx6sO S270 2,8
Error in line 113: Tqg9kIBx6sO A418 51,3
Error in line 97: S270 S698 14,6
Error in line 122: S270 A418 45,0
Error in line 125: S270 S270 97,3
Error in line 128: S270 S698 70,2
Error in line 118: lMuNjA A418 80,9
Error in line 132: lMuNjA S796 33,4
Error in line 109: aFt S270 85,5
Error in line 143: lMuNjA S698 72,7
Error in line 135: Tqg9kIBx6sO S698 24,5
Error in line 165: lMuNjA S796 11,3
Error in line 164: RKBtJ S698 50,2
Error in line 175: aFt S698 62,6
Error in line 173: S270 S270 80,4
Error in line 178: aFt S270 4,6
Error in line 154: pH65XSNzW5 S270 363,0
Error in line 181: 0Bv7m S270 27,2
Error in line 183: 0Bv7m S698 2,9
Error in line 185: RKBtJ S270 16,4
Error in line 182: pH65XSNzW5 S698 97,3
Error in line 186: RKBtJ S470 8,7
Error in line 191: RKBtJ S270 89,2
Error in line 190: pH65XSNzW5 A418 42,5
Error in line 198: 0Bv7m S796 98,6
Error in line 197: pH65XSNzW5 S796 40,4
Error in line 196: Tqg9kIBx6sO S698 90,1
Error in line 202: 0Bv7m S270 29þ1
Error in line 195: aFt S698 17,5
Error in line 205: aFt A418 8,4
Error in line 217: RKBtJ S698 96,6
Error in line 223: aFt S698 325,6
Error in line 228: S270 S698 86,9
Error in line 231: S270 S270 33,3
Error in line 219: RKBtJ S270 41,9
Error in line 235: aFt S270 25,7
